# ALooper

./: .gitignore  CMakeLists.txt  README  README.md
inc/: config-arm.h  config.h
inc/cutils/: atomic-inline.h  atomic-x86.h  log.h  properties.h  threads.h  uio.h
inc/foundation/: AAtomizer.h  ABitReader.h  ABuffer.h  ADebug.h  AHandler.h  AHandlerReflector.h  AHierarchicalStateMachine.h  ALooper.h  ALooperRoster.h  AMessage.h  AString.h  base64.h  hexdump.h
inc/utils/: AndroidThreads.h  BasicHashtable.h  BitSet.h  BlobCache.h  BufferedTextOutput.h  ByteOrder.h  CallStack.h  Compat.h  Condition.h  Debug.h  Endian.h  Errors.h  FileMap.h  Flattenable.h  Functor.h  GenerationCache.h  KeyedVector.h  LinearAllocator.h  LinearTransform.h  List.h  Log.h  Looper.h  Mutex.h  PropertyMap.h  RWLock.h  RefBase.h  SharedBuffer.h  Singleton.h  SortedVector.h  Static.h  StopWatch.h  String16.h  String8.h  StringArray.h  StrongPointer.h  SystemClock.h  TextOutput.h  Thread.h  ThreadDefs.h  Timers.h  (+11 more)
src/foundation/: AAtomizer.cpp  ABitReader.cpp  ABuffer.cpp  AHandler.cpp  AHierarchicalStateMachine.cpp  ALooper.cpp  ALooperRoster.cpp  AMessage.cpp  AString.cpp  Android.mk  base64.cpp  hexdump.cpp
src/libcutils/: Android.mk  log.c  threads.c
src/utils/: Android.mk  BasicHashtable.cpp  BlobCache.cpp  BufferedTextOutput.cpp  CallStack.cpp  Debug.cpp  FileMap.cpp  Flattenable.cpp  LinearTransform.cpp  Log.cpp  Looper.cpp  PropertyMap.cpp  RefBase.cpp  SharedBuffer.cpp  Static.cpp  StopWatch.cpp  String16.cpp  String8.cpp  StringArray.cpp  SystemClock.cpp  TextOutput.cpp  Threads.cpp  Timers.cpp  Tokenizer.cpp  Trace.cpp  Unicode.cpp  VectorImpl.cpp  WorkQueue.cpp  ZipFileCRO.cpp  ZipFileRO.cpp  ZipUtils.cpp  misc.cpp
src/utils/tests/: BasicHashtable_test.cpp  BlobCache_test.cpp  Looper_test.cpp  String8_test.cpp  TestHelpers.h  Unicode_test.cpp  Vector_test.cpp  ZipFileRO_test.cpp
test/: AHandler_test.cpp  ALooper_test.cpp  Android.mk
